animation safari fix

--- a/src/Pages/Survey/Finalize.css
+++ b/src/Pages/Survey/Finalize.css
@@ -203,13 +203,19 @@
 }
 
 @keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 
 @keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
   100% {
-    opacity: 0%;
+    opacity: 0;
   }
 }
